[workspace]
resolver = "2"

members = [
    "plugin",
    "programs/common",
    "programs/ping",
    "programs/ping_cpi",
    "programs/fail_on_division",    
    "programs/fail_on_division_cpi", 
]

[workspace.dependencies]
log = "0.4.22"
anyhow = { version = "=1.0.93" }
solana-program = { version = "=2.0.17" }
solana-sdk = { version = "=2.0.17" }
solana-logger = { version = "=2.0.17" }
agave-geyser-plugin-interface = { version = "=2.0.17" }
serde = "1.0.215"
serde_json = "1.0.133"
serde_derive = "1.0.215"
tempfile = "3.14"
borsh = { version = "1.5.1", features = ["derive", "unstable__schema"] }