[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "async_plugin"

[dependencies]
log = "0.4.17"
thiserror = "1.0.37"
solana-sdk = { version = "=1.17.31" }
solana-logger = { version = "=1.17.31" }
solana-geyser-plugin-interface = { version = "=1.17.31" }
serde = "1.0.145"
serde_json = "1.0.85"
serde_derive = "1.0.145"

[dev-dependencies]
tempfile = "3"
