[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "async_plugin"

[dependencies]
log = "0.4.22"
anyhow = { version = "=1.0.93" }
solana-program = { version = "=2.0.17" }
solana-sdk = { version = "=2.0.17" }
solana-logger = { version = "=2.0.17" }
agave-geyser-plugin-interface = { version = "=2.0.17" }
serde = "1.0.215"
serde_json = "1.0.133"
serde_derive = "1.0.215"

[dev-dependencies]
tempfile = "3.14"
