[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "async_plugin"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = { workspace = true }
agave-geyser-plugin-interface = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
