[package]
name = "fail_on_division"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
solana-program = { workspace = true }
borsh = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
